<resources>
    <string name="app_name">Current Care</string>
    <string name="select">Select Load Type</string>
    <string name="toManual">Manual Cost Calculator</string>
    <string name="toAuto">Automatic Cost Calculator</string>
    <string name="dialog_daily">Hours of \nDaily Use</string>
    <string name="dialog_quantity">Quantity</string>
    <string name="dialog_load">Rated Power </string>
    <string name="dialog_name">Appliance</string>
    <string name="button_back">Back</string>
    <string name="button_summary">View Summary</string>
    <string name="button_add_appliance">Add Appliance</string>
    <string name="button_delete">Delete</string>
    <string name="button_export">Export</string>
    <string name="label_daily">Daily:</string>
    <string name="label_monthly">Monthly:</string>
    <string name="label_totalCost">Total Electricity Cost:</string>
    <string name="label_zero">₱ 0.00</string>
    <string name="label_cost">Cost:</string>
    <string name="label_dailyS">Daily</string>
    <string name="label_monthlyS">Monthly</string>
    <string name="label_load">Watts</string>
    <string name="label_quantity">Unit(s)</string>
    <string name="label_hour">hr(s)</string>
    <string-array name="elec_company">
        <item>NORECO</item>
        <item>CEBECO</item>
        <item>VECO</item>
    </string-array>

    <string name="tip_1">To save the most energy, switch off the power point rather than leave appliances on standby.</string>
    <string name="tip_2">Turn off your heater, cooling units and appliances when you go to bed or leave the house.</string>
    <string name="tip_3">Switch off your computer and equipment such as printers or Wi-Fi routers overnight or when you\'re away.</string>
    <string name="tip_4">To save the most energy, switch off the power point rather than leave appliances on standby.</string>
    <string name="tip_5">The Philippines experiences warm weather year-round, making electricity consumption high, especially for cooling and lighting.</string>
    <string name="tip_6">Open curtains and blinds during the day to utilize natural light and minimize the need for artificial lights. This simple switch can significantly reduce your electricity consumption.</string>
    <string name="tip_7">Replace your traditional incandescent bulbs with energy-efficient LED bulbs. They last significantly longer and consume up to 90% less energy, saving you money and energy in the long run.</string>
    <string name="tip_8">Install motion-sensor lights in areas like hallways, entrances, and even under cabinets. This ensures light is only used when needed, preventing unnecessary energy waste.</string>
    <string name="tip_9">When the weather permits, open windows and doors on opposite sides of your house to create cross-ventilation. To your home cool and comfortable without relying on the AC.</string>
    <string name="tip_10">Electronics in standby mode still consume energy, so unplug chargers, TVs, and other devices when not in use. Consider using power strips with on/off switches for easy control of multiple devices.</string>
</resources>