<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manual"
    android:background="@drawable/bg6">
    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:layout_marginTop="10dp"/>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="180dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                >
                <TextView
                    android:id="@+id/sDaily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_daily"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_monthly"
                    android:layout_below="@id/sDaily"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_export" />

    <ImageView
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ccfulllogo"
        android:layout_centerHorizontal="true"
        android:importantForAccessibility="no">

    </ImageView>

</RelativeLayout>
