<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manual"
    android:background="@drawable/bg6">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="200dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                >

                <TextView
                    android:id="@+id/totalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_totalcost"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/total_dailyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/totalLabel"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/label_daily"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/total_monthlyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/totalLabel"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/label_monthly"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/total_dailyLabel"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@id/total_dailyLabel"
                    android:text="@string/label_zero" />

                <TextView
                    android:id="@+id/total_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/total_monthlyLabel"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@id/total_monthlyLabel"
                    android:text="@string/label_zero" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="270dp"
        android:scrollbars="none">
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="245dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_add" />

    <Button
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_summary" />

    <ImageView
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ccfulllogo"
        android:layout_centerHorizontal="true"
        android:importantForAccessibility="no">

    </ImageView>
    <Button
        android:id="@+id/btnGoBack1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
