<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_name"
                    android:textColor="@android:color/holo_purple"
                    android:textFontWeight="1000"
                    android:textSize="15sp"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/load"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:text="@string/dialog_load"
                    android:textColor="#000000"
                    android:textFontWeight="1000"
                    android:textSize="15sp"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/load"
                    android:text="@string/dialog_quantity"
                    android:textColor="#000000"
                    android:textFontWeight="1000"
                    android:textSize="15sp"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/hrsDaily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/quantity"
                    android:text="@string/dialog_daily"
                    android:textColor="#000000"
                    android:textFontWeight="1000"
                    android:textSize="15sp"
                    tools:targetApi="p" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/button_delete" />

                <TextView
                    android:id="@+id/costLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hrsDaily"
                    android:text="Cost:"
                    android:textColor="#000000"
                    android:textFontWeight="1000"
                    android:textSize="15sp"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/costDaily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/costLabel"
                    android:text="Daily "
                    android:layout_marginLeft="5dp"
                    android:textColor="#000000"
                    android:textFontWeight="1000"
                    android:textSize="15sp"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/dailyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/costLabel"
                    android:layout_toEndOf="@id/costDaily"
                    android:text="  Daily" />

                <TextView
                    android:id="@+id/costMonthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/costDaily"
                    android:text="Monthly"
                    android:textColor="#000000"
                    android:layout_marginLeft="5dp"
                    android:textFontWeight="1000"
                    android:textSize="15sp"
                    tools:targetApi="p" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/costDaily"
                    android:layout_toEndOf="@id/costMonthly"
                    android:text="  Monthly" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/load"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="1dp"
                    android:layout_toEndOf="@id/load"
                    android:text="  Watts" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/quantity"
                    android:layout_toEndOf="@id/quantity"
                    android:text="  Units" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/hrsDaily"
                    android:layout_toEndOf="@id/hrsDaily"
                    android:text="  hrs" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
