<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="137dp"
            android:hint="Fan"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="30"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/loadEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameEdit"
            android:layout_alignParentStart="true"
            android:layout_marginStart="137dp"
            android:layout_marginTop="1dp"
            android:hint="    25    "
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/quantityEdit"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loadEdit"
            android:layout_alignParentStart="true"
            android:layout_marginStart="137dp"
            android:hint="1"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/hrsDailyEdit"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantityEdit"
            android:layout_alignParentStart="true"
            android:layout_marginStart="137dp"
            android:hint="12"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/nameEdit"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="9dp"
            android:text="@string/dialog_name"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/loadEdit"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="9dp"
            android:text="@string/dialog_load"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/quantityEdit"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="9dp"
            android:text="@string/dialog_quantity"
            android:textSize="20sp" />

        <TextView
            android:layout_width="93dp"
            android:layout_height="61dp"
            android:layout_alignBottom="@+id/hrsDailyEdit"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="-15dp"
            android:text="@string/dialog_daily"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/power_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/loadEdit"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/loadEdit"
            android:gravity="center"
            android:text="Watts"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/power_type"
            android:layout_marginStart="0dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@+id/power_type"
            android:text="HP"
            android:textSize="10sp" />

    </RelativeLayout>

</RelativeLayout>
